# self-drive-ws

./: .gitignore  .gitmodules  README.md  detector_req.txt  detector_setup.bash  dockerx11.sh  frames_2025-04-26_23.23.58.gv  frames_2025-04-26_23.56.37.gv  frames_2025-05-06_22.39.34.gv  frames_2025-05-06_22.39.46.gv  irl_build.bash  irl_build.sh  launch.sh  libinstall.sh  os-122220002210-metadata.json  rviz.rviz  sim_build.bash  sim_build.sh  sim_build.zsh  steve_compy_ros2  terminate.sh  tune_hsv.py
behaviour_manager/: CMakeLists.txt  package.xml
behaviour_manager/src/: behaviour_manager_node.cpp
detective/: README.md  package.xml  setup.py
detective/detective/: Stop.py  detector_base.py  drum_detector_node.py  drums.py  pedestrian.py  pedestrian_detector_node.py  pothole_detector_node.py  stop_sign_detector_node.py
detector/: CMakeLists.txt  package.xml
goal_calculator/: package.xml  setup.py
goal_calculator/config/: config.yaml
goal_calculator/goal_calculator/: StopServer.py  goal_calc2.py  lane_change.py  lane_change_yellow.py  lane_follow.py  left_turn.py  right_turn.py  ros2_wrapper.py
goal_calculator/launch/: goalcalc.launch.py  lane_change.launch.py
height_mapper/: CMakeLists.txt
height_mapper/src/: height_mask_publisher_node.cpp
interfaces/: CMakeLists.txt
interfaces/action/: GoalAction.action  LaneChangeAction.action  LeftTurn.action  StopAction.action
interfaces/srv/: LaneFollowToggle.srv
intersection_detector/: CMakeLists.txt
intersection_detector/src/: intersection_detector_node.cpp
intersection_interfaces/: CMakeLists.txt  package.xml
intersection_interfaces/action/: RightTurn.action
lane_mapper/: CMakeLists.txt  package.xml
lane_mapper/src/: lane_mapper.cpp  lane_mask_publisher_node.cpp  nearest_lane_mapper_node.cpp
launcher/: CMakeLists.txt
launcher/config/: config.yaml
launcher/launch/: main.launch.py
local_costmap/: CMakeLists.txt  package.xml
local_costmap/config/: costmap_params.yaml
local_costmap/src/: local_costmap_node.cpp
map_localiser/: CMakeLists.txt  package.xml
mapper/: CMakeLists.txt
mapper/src/: mapper.cpp
multimap_assembler/src/: multimap_assembler_node.cpp
planner_server/param/: dwb.yaml
planner_server_dwb/: CMakeLists.txt
planner_server_dwb/config/: bt_recovery.yaml  controller.yaml  new_planner_server.yaml  old_controller.yaml  planner_server.yaml  recovery.yaml
planner_server_dwb/launch/: planner.launch.py
robot_pose_publisher/src/: robot_pose_publisher.cpp
ros1-bridge/: .gitmodules  container_init.sh
spline_interp/src/: linear_interp.cpp  spline_interp.cpp
src/behaviour_manager/: CMakeLists.txt
src/detective/: setup.cfg  setup.py
src/detector_cpp/: CMakeLists.txt  package.xml
src/detector_cpp/src/: barrel_detector_node.cpp
src/filterer/: package.xml  setup.cfg  setup.py
src/goal_calculator/: package.xml  setup.cfg  setup.py
src/goal_calculator_cpp/: CMakeLists.txt  package.xml
src/goal_calculator_cpp/config/: config.yaml
src/goal_calculator_cpp/src/: find_intersection_action_server.cpp  goal_calc.cpp  lane_follow.cpp  right_turn.cpp  utils.cpp
src/height_mapper/: CMakeLists.txt  package.xml
src/height_mapper/src/: height_mapper_node.cpp  height_mask_publisher_node.cpp  height_mask_publisher_node_dev.cpp  pc_odom.cpp
src/interfaces/: package.xml
src/intersection_detector/: CMakeLists.txt  package.xml
src/intersection_detector/src/: intersection_detector_node.cpp
src/intersection_detector/srv/: DetectIntersection.srv
src/lane_mask_publisher/: CMakeLists.txt  package.xml
src/lane_mask_publisher/src/: lane_mask_publisher_node.cpp  tune.cpp  tuner.cpp
src/launcher/: package.xml  (+1 more)
src/map_reviser/: CMakeLists.txt  package.xml
src/map_reviser/action/: FindIntersection.action
src/map_reviser/src/: intersection_clearer.cpp  nearest_lane_mapper_node.cpp  new_intersection_clearer.cpp  yellow_lane_interpolator.cpp
src/mapper/: CMakeLists.txt  package.xml
src/mapper/src/: mapper.cpp
src/merging/: package.xml  setup.cfg  setup.py
src/merging/merging/: merge_check.py  merging.py  merging_tester.py
src/merging_interface/: CMakeLists.txt  package.xml
src/merging_interface/srv/: DetectMerging.srv
src/multimap_assembler/: CMakeLists.txt  package.xml
src/multimap_assembler/src/: multimap_assembler_node.cpp
src/parking/: CMakeLists.txt  package.xml
src/parking/src/: parallel.cpp  pullin.cpp  pullintest.cpp  pullout.cpp
src/parkme/: CMakeLists.txt  package.xml
src/parkme/src/: park_lanes.cpp  park_no_lanes.cpp  parking_action_client.cpp  pullout_lanes.cpp  utils.cpp
src/planner_server/: CMakeLists.txt  package.xml
src/planner_server/config/: bt_recovery.yaml  controller.yaml  planner_server.yaml  recovery.yaml
src/planner_server/launch/: behaviour.xml  navigation2.launch.py  planner.launch.py
src/planner_server/map/: map.yaml
src/planner_server/param/: burger.yaml  mppi.yaml
src/ramp_goals/: CMakeLists.txt  package.xml
src/ramp_goals/src/: ramp_goals.cpp
src/robot_pose_publisher/: CMakeLists.txt  package.xml
src/robot_pose_publisher/src/: robot_pose_publisher.cpp
src/spline_interp/: CMakeLists.txt  package.xml
src/spline_interp/src/: linear_interp.cpp
src/topic_remapper/: CMakeLists.txt
src/topic_remapper/include/topic_remapper/: topic_remapper.hpp
src/topic_remapper/src/: goal_topic_remapper_node.cpp  motion_control_topic_remapper_node.cpp  occupancy_grid_topic_remapper_node.cpp  odom_topic_remapper_node.cpp  pose_stamped_topic_remapper_node.cpp
src/topic_remapper/srv/: ChangeTopic.srv
src/transforms/: CMakeLists.txt  package.xml
src/transforms/launch/: transforms.launch.py
src/transforms/src/: lidar_tf.cpp  lidar_tf2.cpp  odom_pc.cpp  odom_tf.cpp  sim_odom_pc.cpp  zed_tf.cpp
src/vision/: CMakeLists.txt  package.xml
src/vision/launch/: mapping.launch.py
src/vision/src/: depth_mapper.cpp  obstacle_cloud.cpp  pc_mapper.cpp  pc_pub.cpp
tf_odom_link_base/: setup.py
topic_remapper/: CMakeLists.txt  package.xml
topic_remapper/src/: topic_remapper_node.cpp
topic_remapper/srv/: ChangeTopic.srv
(+74 files in other folders)
