<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>goal_calculator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="janak3.1415et@gmail.com">cdger</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies for building the package -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies for action messages -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- Ensure action files are recognized -->
  <build_depend>rosidl_interface_packages</build_depend>
  <exec_depend>rosidl_interface_packages</exec_depend>

  <!-- Ensure Python bindings for action messages -->
  <build_depend>action_msgs</build_depend>
  <exec_depend>action_msgs</exec_depend>

  <!-- Dependencies for runtime execution -->
  <exec_depend>rclpy</exec_depend>

  <!-- Dependencies for testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
