<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>merging</name>
  <version>0.0.1</version>
  <description>TODO : Package description</description>
  <maintainer email="sufy1707@gmail.com">zero</maintainer>
  <license>Apache-2.0</license>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>merging_interface</depend>

  <!-- Export build type for Python -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
